made media queries to adjust header for desktop, the big-story section for desktop and made small size adjustments to news cards and fonts in general. Switched the logos as well, so the large one is always in the header and the small one now lives in the footer.

--- a/code/index.html
+++ b/code/index.html
@@ -13,7 +13,6 @@
   <header>
     <section class="flex-parent-header">
       <div class="flex-child logo">
-        <a class="logosmall" href="index.html"><img src="./smalllogotransparent.png" alt="Good News logo"></a>
         <a class="logolarge" href="index.html"><img src="./fulllogotransparent.png" alt="Good News logo"></a>
       </div>
       <div class="flex-child navbar">
@@ -94,5 +93,10 @@
 </section>
 
 <footer>
-  <a href="#top"><button>Return to the Top</button></a>
+  <a class="logosmall" href="index.html"><img src="./smalllogotransparent.png" alt="Good News logo"></a>
 </footer>
+
+
+
+
+<!--<a href="#top"><button>Go back up!</button></a>-->
