--- a/code/index.html
+++ b/code/index.html
@@ -32,7 +32,7 @@
           <img src="./woman-nature-medium.jpg" alt="Woman hiking in nature" style="width:100%;height:50%">
       <div class="big-card-text">
         <h2>Headline For a Very Important Article</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam rutrum auctor felis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam tempor laoreet pellentesque. Aliquam in congue tellus...<p>   
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam rutrum auctor felis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam tempor laoreet pellentesque. Aliquam in congue tellus...<p>
       </div>
     </article></a>
   </div>
@@ -92,6 +92,10 @@
   </div>
 </section>
 
+<section class="button">
+  <a href="#top"><button>Go Back Up</button></a>
+</section>
+
 <footer>
   <a class="logosmall" href="index.html"><img src="./smalllogotransparent.png" alt="Good News logo"></a>
 </footer>
@@ -99,4 +103,4 @@
 
 
 
-<!--<a href="#top"><button>Go back up!</button></a>-->
+<!---->
