Add images other news

--- a/code/index.html
+++ b/code/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Newsreader:opsz@6..72&family=PT+Sans+Narrow&family=Rubik+Gemstones&family=Rye&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <link rel="stylesheet" href="./style.css" />
     <script
       src="https://kit.fontawesome.com/818262a977.js"
@@ -68,7 +72,7 @@
     <div class="border-container">
       <section class="big-news">
         <!-- The big news content -->
-        <div class="grid-parent">
+        <div class="grid-parent-big-news">
           <div class="grid-child-big-news paragraph-grid-item">
             <div class="big-news-paragraph">
               <h2>The Latest Rage - Cat Yoga!</h2>
@@ -144,11 +148,81 @@
           </div>
         </div>
       </section>
-      <section class="">
+      <section class="other-news">
+        <h2>Reviews of Training</h2>
         <!-- The other news  -->
         <!-- On desktop-sized screens: four cards in a row, 
          On tablets: two in a row, 
         On mobile: one card on each row. -->
+        <div class="grid-parent-other-news">
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="img-other-news-div">
+                  <div class="card">
+                    <img
+                      src="../img/outoodoorYogaCat.jpg"
+                      class="img-other-news-one"
+                      alt="A cat doing yoga outdoors"
+                      title="Outdoor Yoga Cat"
+                    />
+                    <div>
+                      <p class="review">“I absolutely adore outdoor yoga!”</p>
+                    </div>
+                    <div>
+                      <i class="material-icons star" aria-hidden="true">star</i>
+                      <i class="material-icons star" aria-hidden="true">star</i>
+                      <i class="material-icons star" aria-hidden="true">star</i>
+                      <i class="material-icons star" aria-hidden="true">star</i>
+                      <i class="material-icons star" aria-hidden="true">star</i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="grid-child-other-news medium-grid-item">
+            <div class="img-other-news-div">
+              <figure>
+                <img
+                  src="../img/climbingCat.jpg"
+                  class="img-other-news-two"
+                  alt="A cat climbing"
+                  title="Climbing Cat"
+                />
+                <figcaption>
+                  <em>Photo: Michelle Wegler</em>
+                </figcaption>
+              </figure>
+            </div>
+          </div>
+          <div class="grid-child-other-news medium-grid-item">
+            <figure>
+              <img
+                src="../img/walkingCat.jpeg"
+                class="img-other-news-three"
+                alt="A cat walking"
+                title="Walking Cat"
+              />
+              <figcaption>
+                <em>Photo: Michelle Wegler</em>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="grid-child-other-news medium-grid-item">
+            <figure>
+              <img
+                src="../img/crunchingCat.jpg"
+                class="img-other-news-four"
+                alt="A cat doing crunches"
+                title="Crunching Cat"
+              />
+              <figcaption>
+                <em>Photo: Michelle Wegler</em>
+              </figcaption>
+            </figure>
+          </div>
+        </div>
       </section>
     </div>
     <footer>
