updated design and added box-shadows for the moible layout

--- a/code/index.html
+++ b/code/index.html
@@ -36,13 +36,13 @@
       <!-- The big news content -->
     <section class="big-news">
       <div class="main-text">
-      <h2>All aboout hiking!</h2>
-      <p>Thinking about were to go for your next hike?</p>
+      <h2>All about hiking!</h2>
+      <p>Thinking about where to go for your next hike?</p>
       <p>What food to bring along the way?</p>
       <p>Which shoes are best suited?</p>
       <p>You will find a lot of inspiration here, we promise!</p>
       <p>Doesn't matter if you want to explore the nature close</p>
-      <p>at hand or travel farther, we got you covered!</p>
+      <p>at hand or travel further, we got you covered!</p>
       <button>READ MORE</button>
       </div>
       <div class="image-box-main">
@@ -72,7 +72,7 @@
       </div>
       <div class="box three">
         <div class="text-in-fatbox">
-        <h3>Tasty receipes</h3>
+        <h3>Tasty recipes</h3>
         <p>Perfect for cooking outside</p>
         </div>
         <div class="image-box">
