readded an image that had been deleted, and tried to make  sure the code is legible

--- a/code/index.html
+++ b/code/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0>">
   </head>
 
-  <body>
-
+<body>
+<!--Top of the page-->
   <header>
     <section class="flex-parent-header">
       <div class="flex-child logo">
@@ -17,90 +17,76 @@
       </div>
       <div class="flex-child navbar">
         <nav>
-            <a href="./index.html">Home</a>
-            <a href="#">Archive</a>
-            <a href="#">Contact</a>
+          <a href="./index.html">Home</a>
+          <a href="#">Archive</a>
+          <a href="#">Contact</a>
         </nav>
     </section>
   </header>
-
-
+<!--News-section of the page-->
 <section class="news-grid">
-
   <div class="news-card big-card">
     <a href="#"><article>
-          <img src="./woman-nature-medium.jpg" alt="Woman hiking in nature" style="width:100%;height:50%">
+      <img src="./woman-nature-medium.jpg" alt="Woman hiking in nature" style="width:100%;height:50%">
       <div class="big-card-text">
         <h2>Headline For a Very Important Article</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam rutrum auctor felis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam tempor laoreet pellentesque. Aliquam in congue tellus...<p>
       </div>
     </article></a>
   </div>
-
   <div class="news-card small-card">
     <a href="#"><article>
-        <img src="./Balloons.jpg" alt="Balloons" style="width:100%;height:70%">
+      <img src="./Balloons.jpg" alt="Balloons" style="width:100%;height:70%">
       <div class="small-card-text">
         <h3>Interesting Article: You Should Read This</h3>
-            </div>
+      </div>
     </article></a>
   </div>
-
   <div class="news-card small-card">
     <a href="#"><article>
       <img src="./smallsunflowers.jpg" alt="Sunflowers" style="width:100%;height:70%">
-    <div class="small-card-text">
-      <h3>Interesting Article: You Should Read This</h3>  
-    </div>
-  </article></a>
+      <div class="small-card-text">
+        <h3>Interesting Article: You Should Read This</h3>  
+      </div>
+    </article></a>
   </div>
-
   <div class="news-card small-card">
     <article>
       <img src="./sunballoon.jpg" alt="Sun balloon in a grass field" style="width:100%;height:70%">
-    <div class="card-text">
-      <h3>Interesting Article: You Should Read This</h3>   
-    </div>
-  </article>
+      <div class="card-text">
+        <h3>Interesting Article: You Should Read This</h3>   
+      </div>
+    </article>
   </div>
-
   <div class="news-card small-card">
     <a href="#"><article>
       <img src="./workandplay.jpg" alt="sign with the words work and play" style="width:100%;height:70%">
-    <div class="card-text">
-      <h3>Interesting Article: You Should Read This</h3>   
-    </div>
-  </article></a>
+      <div class="card-text">
+        <h3>Interesting Article: You Should Read This</h3>   
+      </div>
+    </article></a>
   </div>
-
   <div class="news-card small-card">
     <a href="#"><article>
       <img src="./monkeysmedium.jpg" alt="plastic monkeys" style="width:100%;height:70%">
-    <div class="card-text">
-      <h3>Interesting Article: You Should Read This</h3>  
-    </div>
-  </article></a>
+      <div class="card-text">
+        <h3>Interesting Article: You Should Read This</h3>  
+      </div>
+    </article></a>
   </div>
-
   <div class="news-card small-card">
     <a href="#"><article>
       <img src="./smileyballoons.jpg" alt="Trulli" style="width:100%;height:70%">
-    <div class="card-text">
-      <h3>Interesting Article: You Should Read This</h3>  
-    </div>
-  </article></a>
+      <div class="card-text">
+       <h3>Interesting Article: You Should Read This</h3>  
+     </div>
+   </article></a>
   </div>
 </section>
-
+<!--Bottom of the page-->
 <section class="button">
   <a href="#top"><button>Go Back Up</button></a>
 </section>
-
 <footer>
   <a class="logosmall" href="index.html"><img src="./smalllogotransparent.png" alt="Good News logo"></a>
 </footer>
-
-
-
-
-<!---->
