--- a/code/index.html
+++ b/code/index.html
@@ -34,7 +34,7 @@
         <h1>Travel News - Let's go!</h1>
     </div>
 </div>
-<section class="head-news">
+<section class="container-head-news">
     <img class ="fit" src="https://i.ibb.co/LxzRJ93/Pexels-jaime-reimer-2662116.jpg" alt="Pexels-jaime-reimer-2662116">
         <div class="top-news">
             <h3>FINALLY WE CAN START TRAVEL AGAIN</h3> 
