Update grid other news

--- a/code/index.html
+++ b/code/index.html
@@ -160,67 +160,110 @@
               <div class="grid-child-other-news medium-grid-item">
                 <div class="img-other-news-div">
                   <div class="card">
-                    <img
-                      src="../img/outoodoorYogaCat.jpg"
-                      class="img-other-news-one"
-                      alt="A cat doing yoga outdoors"
-                      title="Outdoor Yoga Cat"
-                    />
                     <div>
-                      <p class="review">“I absolutely adore outdoor yoga!”</p>
-                    </div>
-                    <div>
-                      <i class="material-icons star" aria-hidden="true">star</i>
-                      <i class="material-icons star" aria-hidden="true">star</i>
-                      <i class="material-icons star" aria-hidden="true">star</i>
-                      <i class="material-icons star" aria-hidden="true">star</i>
-                      <i class="material-icons star" aria-hidden="true">star</i>
+                      <img
+                        src="../img/outoodoorYogaCat.jpg"
+                        class="img-other-news-one"
+                        alt="A cat doing yoga outdoors"
+                        title="Outdoor Yoga Cat"
+                      />
+                      <div>
+                        <p class="review">“I absolutely adore outdoor yoga!”</p>
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                        <i class="material-icons pets" aria-hidden="true"
+                          >pets</i
+                        >
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="grid-child-other-news medium-grid-item">
-            <div class="img-other-news-div">
-              <figure>
-                <img
-                  src="../img/climbingCat.jpg"
-                  class="img-other-news-two"
-                  alt="A cat climbing"
-                  title="Climbing Cat"
-                />
-                <figcaption>
-                  <em>Photo: Michelle Wegler</em>
-                </figcaption>
-              </figure>
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="img-other-news-div">
+                  <div class="card">
+                    <img
+                      src="../img/climbingCat.jpg"
+                      class="img-other-news-two"
+                      alt="A cat climbing"
+                      title="Climbing Cat"
+                    />
+                    <div>
+                      <p class="review">
+                        “Wow, bouldering was so much fun, and scary at the same
+                        time!”
+                      </p>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="grid-child-other-news medium-grid-item">
-            <figure>
-              <img
-                src="../img/walkingCat.jpeg"
-                class="img-other-news-three"
-                alt="A cat walking"
-                title="Walking Cat"
-              />
-              <figcaption>
-                <em>Photo: Michelle Wegler</em>
-              </figcaption>
-            </figure>
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="img-other-news-div">
+                  <div class="card">
+                    <img
+                      src="../img/walkingCat.jpeg"
+                      class="img-other-news-three"
+                      alt="A cat walking"
+                      title="Walking Cat"
+                    />
+                    <div>
+                      <p class="review">
+                        “Walking is nice, but I didn't work up a sweat”
+                      </p>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-          <div class="grid-child-other-news medium-grid-item">
-            <figure>
-              <img
-                src="../img/crunchingCat.jpg"
-                class="img-other-news-four"
-                alt="A cat doing crunches"
-                title="Crunching Cat"
-              />
-              <figcaption>
-                <em>Photo: Michelle Wegler</em>
-              </figcaption>
-            </figure>
+          <div class="grid-child-other-news paragraph-grid-item">
+            <div class="other-news-paragraph">
+              <div class="grid-child-other-news medium-grid-item">
+                <div class="img-other-news-div">
+                  <div class="card">
+                    <img
+                      src="../img/crunchingCat.jpg"
+                      class="img-other-news-four"
+                      alt="A cat doing crunches"
+                      title="Crunching Cat"
+                    />
+                    <div>
+                      <p class="review">“Omg, I hate crunches!”</p>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                      <i class="material-icons pets" aria-hidden="true">pets</i>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
