trying to make content more responsive etc

--- a/code/index.html
+++ b/code/index.html
@@ -14,12 +14,12 @@
       <div class="logo-container">
         <img class="logo" src="logo.svg" alt="logo"/>
       </div>
-      <h1>LIVE MUSIC DAILY</h1>
+      <h1>MUSIC MAGAZINE</h1>
       <nav class="nav">
-        <a class="nav-item" href="path/to/subpage">First link</a>
-        <a class="nav-item" href="path/to/subpage">Second link</a>
-        <a class="nav-item" href="path/to/subpage">Third link</a>
-        <a class="nav-item" href="path/to/subpage">Fourth link</a>
+        <a class="nav-item" href="path/to/subpage">ARTICLES</a>
+        <a class="nav-item" href="path/to/subpage">REVIEWS</a>
+        <a class="nav-item" href="path/to/subpage">ABOUT</a>
+        <a class="nav-item" href="path/to/subpage">MY PAGES</a>
       </nav>
     </header>
 
@@ -57,14 +57,26 @@
       <div class="grid-item small-news">
         <h3>Henry White returns to the stage after five year hiatus</h3>
         <img class="grid-item small-image" src="male-singer.jpg" alt="picture of male singer" />
-        <p class="small-news-text">Erat velit scelerisque in dictum non consectetur a. 
-          Semper quis lectus nulla at volutpat diam ut venenatis. 
-          Consectetur adipiscing elit ut aliquam. </p>
+        <p class="small-news-text">Erat velit scelerisque in dictum 
+          non consectetur a. Semper quis lectus nulla at volutpat 
+          diam ut venenatis. Consectetur adipiscing elit ut aliquam. 
+        </p>
+        <p class="signature-small">BY ELI ANDREWS</p>
       </div>
       <div class="grid-item small-news">
-        <h3>Live recordings - lame substite for the real deal or 
-          valueable captured moments?</h3></div>
-
+        <h3>Live recordings - yay or nay?</h3>
+          <p class="small-news-text">Commodo elit at imperdiet dui 
+            accumsan sit amet. Enim nulla aliquet porttitor lacus
+             luctus accumsan. Consequat interdum varius sit amet 
+             mattis. Consequat nisl vel pretium lectus quam id leo. 
+             Malesuada proin libero nunc consequat interdum varius 
+             sit. Fusce ut placerat orci nulla pellentesque dignissim. 
+             Malesuada fames ac turpis egestas maecenas pharetra 
+             convallis. Mauris ultrices eros in cursus. A condimentum 
+             vitae sapien pellentesque habitant morbi tristique. Est 
+             velit egestas dui id ornare.
+          </p>
+      </div>
       <div class="grid-item small-news">
         <h3>news 3</h3>
         <p class="small-news-text">Elementum curabitur vitae nunc sed velit dignissim sodales ut eu. 
