--- a/code/index.html
+++ b/code/index.html
@@ -54,22 +54,6 @@
 
     </section>
     
-    <!-- two articles in different sizes -->
-     <section class="medium-news">
-      <div class="small-box">
-        <img src="./img/internet.jpg" alt="internet" class="small-img">
-        <h4>What has internet done for us?</h4>
-        <p class="p-medium"> How does it really feel to watch your grandkids on twitch instead of having them in your house eating your cookies?</p>
-      </div>
-      <div class="medium-box">
-        <h3>I don't regret anything, love has been my strongest asset...
-          on't regret anything, love has been my strongest asset..
-          on't regret anything, love has been my strongest asset..
-        </h3>
-      
-      </div>
-    </section>
-
     <!-- Articles in a grid -->
     <section class="grid-parent">
       <a href="https://www.newyorker.com/culture/photo-booth/sea-women-of-south-korea?epik=dj0yJnU9Mm9QTC11SzN1alVXQ1dYWVVuZ3pvOUJ3cjBrMGFBN0omcD0wJm49Vm10c1FlYkJPZ3lhLWNrcUNmZkllZyZ0PUFBQUFBR1BELUtF">
@@ -112,7 +96,20 @@
       </div>
     </section>
 
-
+    <!-- two articles in different sizes -->
+    <section class="medium-news">
+      <div class="small-box">
+        <img src="./img/internet.jpg" alt="internet" class="small-img">
+        <h4>What has internet done for us.</h4>
+        <p class="p-medium"> How does it really feel to watch your grandkids on twitch 
+          instead of having them in your house eating your cookies?
+        </p>
+      </div>
+      <div class="medium-box">
+        <h3>I don't regret anything, love has been my strongest asset...
+        </h3>
+      </div>
+    </section>
 
 
     <footer>
