--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,80 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <!--LOGO-->
+      <header class="header">
+
+        <h1>THE CODE TIMES</h1>
+
+        <!--Menu-->
+        <div class="menu">  
+            <h2>TECHNIGO</h2>
+            <h2>TJEJER KODAR</h2>
+            <h2>GITHUB</h2>
+            <h2>SLACK</h2>
+            <h2>STACK OVERFLOW</h2>
+        </div>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+   <!--Breaking news-->
+   <div class="breaking-news">
+      <img src="champion.jpg" alt="Picture of the champion"/>
+      <div class="text-container">
+        <h3>Breaking News</h3>
+        <p class="breaking-news-text">New coding champion breaks all records... Experts say they have never seen coding at this lever before. This coder is predicted to go far.</p>
+      </div>
+    </div>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+    <!--Not so important news-->
+    <div class="smallnews">
+      <div class="newsbox 1">
+          <h4>Code war</h4>
+          <p>A new year has begun and the war continues. The Coders have now established a blockade against the Javas and the tension is increasing...</p>
+      </div>
+
+      <div class="newsbox 2">
+          <h4>NCL</h4>
+          <p>FC Codelona are champions for the fith time. After a nerv wrecking final game the champions were crowned!</p>
+      </div>
+
+      <div class="newsbox 3">
+          <h4>Ecodemy</h4>
+          <p>Coders all over the worls are right now scruggeling with the code inflation...</p>
+      </div> 
+
+      <div class="newsbox 4">
+          <h4>Codeterior</h4>
+          <p>Read about the newest trends in styling your home with coding. The 5 best ways to in a easy way style your code...</p>
+      </div> 
+
+      <div class="newsbox 5">
+          <h4>Codeness</h4>
+          <p>New science breaks the market with a new code diet for healthier living. Try this 7 days coding diet for free. All the people around you will soon discover the difference!</p>
+      </div> 
+
+      <div class="newsbox 6">
+          <h4>Codeluence</h4>
+          <p>Codeluenser in stormy weather due to allegations regarding code larceny. "It was never my intention".</p>
+      </div> 
+
+      <div class="newsbox 7">
+        <h4>Missing</h4>
+        <p>Reports have come in all over the world regarding missing codes. Codelice say they have never had missing reports comming in in this scale before.</p>
+    </div> 
+
+    <div class="newsbox 8">
+      <h4>Codeulture</h4>
+      <p>The Codebel prize winners wild party night after the prize ceremony!</p>
+  </div> 
+
+  </div>
   </body>
 </html>
