barebones website: layout, nav, articles

--- a/code/index.html
+++ b/code/index.html
@@ -14,7 +14,12 @@
         <div class="logo-container">
           <img src="logo.svg" alt="logo for site">
         </div>
-          <nav class="navigation">Media</nav>
+          <ul>
+            <li><a href="default.asp">Home</a></li>
+            <li><a href="news.asp">News</a></li>
+            <li><a href="media.asp">Media</a></li>
+            <li><a href="about.asp">About</a></li>
+          </ul>
       </section>
     </header>
 
@@ -28,16 +33,14 @@
     </section>
 
     <section class="small-news">
-      <div class="articles">
-        <h3>Here's a tattoo!</h3>
-        <h3>Here's a cat too!</h3>
-        <h3>More tats!</h3>
-        <h3>More cats!</h3>
-        <h3>Cats</h3>
-        <h3>Tats</h3>
-        <h3>Little Kitty Cat</h3>
-        <h3>Finally, Tattoos</h3>
-      </div>
+      <div class="article-one">Here's a Tattoo</div>
+      <div class="article-two">Here's a cat too!</div>
+      <div class="article-three">More tats!</div>
+      <div class="article-four">More cats!</div>
+      <div class="article-five">Cats</div>
+      <div class="article-six">Tats</div>
+      <div class="article-seven">Little Kitty Cat</div>
+      <div class="article-eight">Finally, Tattoos</div>
       <!-- The other news  -->
     </section>
   </body>
