--- a/code/index.html
+++ b/code/index.html
@@ -10,7 +10,7 @@
     <header>
       <!--Start of HEADER-->
       <div class="header">
-        <a href="#Home"><img src="./icon-parrot.png" alt="home-icon"></a>
+        <a href="#Home"><img src="../code/icon-parrot.png" alt="home-icon"></a>
         <a href="#Home" class="logo">Loro News</a>
           <div class="header-right">
             <a href="#home">Home</a>
@@ -29,7 +29,7 @@
       <!-- grid item, containing cards -->
       <div class="item-1">
             <a href="" class="card">
-              <div class="thumb" style="background-image: url('../code/loro2.jpg')"></div>
+              <div class="thumb" style="background-image: url('./loro2.jpg')"></div>
               <article>
                 <h1>What parrots eat in a day</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the.</p>
@@ -41,7 +41,7 @@
       <!-- grid item, containing a card -->
       <div class="item-2">
         <a href="" class="card">
-          <div class="thumb" style="background-image: url('../code/loro1.jpg')"></div>
+          <div class="thumb" style="background-image: url('./loro1.jpg')"></div>
           <article>
             <h1>Loro means parrot in Spanish</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
@@ -56,7 +56,7 @@
       <!-- grid item, containing a card -->
       <div class="item-3">
         <a href="" class="card">
-          <div class="thumb" style="background-image: url('../code/loro5.jpg')"></div>
+          <div class="thumb" style="background-image: url('./loro5.jpg')"></div>
           <article>
             <h1>What will parrots live by if the Amazon forrest...</h1>
             <p>It is a long established fact that a reader will be distracted by the 
