added favicon and change title

--- a/code/index.html
+++ b/code/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Hike the World</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⛰</text></svg>">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
