--- a/code/index.html
+++ b/code/index.html
@@ -34,8 +34,12 @@
    </header>
 
    <section class="grid-container">
+    
      <!-- Big news -->
       <div class="big-news">
+        <div class="breaking-container">
+          <p class="breaking">Breaking news Breaking news</p>
+        </div>
         <div class="big-article-img">
           <img src="./bowls-2-612x612.jpg">
         </div>
@@ -43,7 +47,7 @@
           <h2>Bowls still empty</h2>
           <strong>No estimate on when refill might be expected, sources say</strong>
           <p>Our correspondent on site reports humans in the area. So far they have not responded to any attempts of contact.</p>
-          <button>Follow our live updates</button>
+          <button>Follow live updates</button>
        </div>
       </div>
       <!--Item 1, the second important news item-->
@@ -52,7 +56,7 @@
           <p class="tag">NEWS</p>
           <img src="./20201023.jpg">
         </div>
-        <div class="big-text-wrapper">
+        <div class="item1-text-wrapper">
           <h3>Cat union formed</h3>
           <p>“We work hard as cats. Just this week we toppled three plants, slept 18 hours and walked over several keyboards. We demand fair compensation” chaircat Popcorn says. "Absurd claims" according to humans 
           </p>
