--- a/code/index.html
+++ b/code/index.html
@@ -38,44 +38,45 @@
      </div> 
 <!-- Here´s more news(cards)  -->
         <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/trafficlights.jpg">
-        <h2>Accedents due to broken traffic-lights along E75.</h2>
-        <p class="morenewstext">Traffic lights around the Alabama area and especially the E75 is a hazzard...<br>
-        <button><a href="https://www.shmoop.com/drivers-ed/alabama/traffic-lights-and-signals.html">Read article</a></button></p></div>
-
+          <h2>Accedents due to broken traffic-lights along E75.</h2>
+          <p class="morenewstext">Traffic lights around the Alabama area and especially the E75 is a hazzard...<br>
+          <button><a href="https://www.shmoop.com/drivers-ed/alabama/traffic-lights-and-signals.html">Read article</a></button></p>
+        </div>
         <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/logs.jpeg">
-        <h2>Logladyacademy, heres the 2023 nominations.</h2>
-        <p class="morenewstext">The classic Alabama event is back: "After the pandemic its time to hand out prizes" the jury says...<br>
-        <button><a href="https://en.wikipedia.org/wiki/Log_Lady">Read article</a></button></p></div>
-
+          <h2>Logladyacademy, heres the 2023 nominations.</h2>
+          <p class="morenewstext">The classic Alabama event is back: "After the pandemic its time to hand out prizes" the jury says...<br>
+          <button><a href="https://en.wikipedia.org/wiki/Log_Lady">Read article</a></button></p>
+        </div>
         <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/fogpines.jpeg">
-        <h2>Scientists: Fog = Woods best friend</h2>
-        <p class="morenewstext">Scientists agrees; fog or the moisture in the air is what the trees like...<br>
-        <button><a href="https://www.caryinstitute.org/news-insights/media-coverage/fog-connects-ecosystems">Read article</a></button></p></div>
-
+          <h2>Scientists: Fog = Woods best friend</h2>
+          <p class="morenewstext">Scientists agrees; fog or the moisture in the air is what the trees like...<br>
+          <button><a href="https://www.caryinstitute.org/news-insights/media-coverage/fog-connects-ecosystems">Read article</a></button></p>
+        </div>
         <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/axe.jpeg">
-        <h2>Axe-company expands in Alabama</h2>
-        <p class="morenewstext">Finest steel and the hardest woods is the usp of the Alabama axe company, Woddy&Sones...<br>
-        <button><a href="https://www.arms-n-armor.com/blogs/news/what-new-with-the-burgundian-pole-axe">Read article</a></button></p></div>
-
+          <h2>Axe-company expands in Alabama</h2>
+          <p class="morenewstext">Finest steel and the hardest woods is the usp of the Alabama axe company, Woddy&Sones...<br>
+          <button><a href="https://www.arms-n-armor.com/blogs/news/what-new-with-the-burgundian-pole-axe">Read article</a></button></p>
+        </div>
         <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/foggywoods.jpeg">
-        <h2>Climatechanges</h2>
-        <p class="morenewstext">How does the undeniable climatechange affect the dark wood and fine nature surounding Alabama...<br>
-        <button><a href="https://coveringclimatenow.org/?gclid=Cj0KCQiA_P6dBhD1ARIsAAGI7HAdnXMb-inUioq09SEtQJHgAOoGZK8LIh6A4xbHuhlO7y4YLExKxFcaAk64EALw_wcB">Read article</a></button></p></div>
-
+          <h2>Climatechanges</h2>
+          <p class="morenewstext">How does the undeniable climatechange affect the dark wood and fine nature surounding Alabama...<br>
+          <button><a href="https://coveringclimatenow.org/?gclid=Cj0KCQiA_P6dBhD1ARIsAAGI7HAdnXMb-inUioq09SEtQJHgAOoGZK8LIh6A4xbHuhlO7y4YLExKxFcaAk64EALw_wcB">Read article</a></button></p>
+        </div>
         <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/snowonpines.jpg">
-        <h2>Winters has arrived</h2>
-        <p class="morenewstext">The hardware store are bunkering salt and shovels. Winter is here and with that comes snow...<br>
-        <button><a href="https://www.britannica.com/place/Alabama-state/Climate">Read article</a></button></p></div>
-
+          <h2>Winters has arrived</h2>
+          <p class="morenewstext">The hardware store are bunkering salt and shovels. Winter is here and with that comes snow...<br>
+          <button><a href="https://www.britannica.com/place/Alabama-state/Climate">Read article</a></button></p>
+        </div>
         <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/workershand.jpg">
-        <h2>Local designer opens studio </h2>
-        <p class="morenewstext">From furniture to exclusive artwork and jewleries, the local craftmans and designers...<br>
-        <button><a href="https://www.alabamawoodworker.com/">Read article</a></button></p></div>
-
+          <h2>Local designer opens studio </h2>
+          <p class="morenewstext">From furniture to exclusive artwork and jewleries, the local craftmans and designers...<br>
+          <button><a href="https://www.alabamawoodworker.com/">Read article</a></button></p>
+        </div>
         <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/cameraman.jpg">
-        <h2>Leeland Hay new documentary</h2>
-        <p class="morenewstext">The rarest among pines has its home i Mexico and ofcourse Alabamas own Leeland Hay is...<br>
-        <button><a href="https://www.youtube.com/watch?v=k_xKhHwqeW8">Watch movie</a></button></p></div>
+          <h2>Leeland Hay new documentary</h2>
+          <p class="morenewstext">The rarest among pines has its home i Mexico and ofcourse Alabamas own Leeland Hay is...<br>
+          <button><a href="https://www.youtube.com/watch?v=k_xKhHwqeW8">Watch movie</a></button></p>
+        </div>
       </div>
     </section>
    </div>
