--- a/code/index.html
+++ b/code/index.html
@@ -11,11 +11,12 @@
   </head>
 <body>
   <div class="mormor">
-  <header> 
+
+    <!-- Hero section -->
+  <header class="container-hero"> 
       <h1>Dog Parent Weekly</h1>
       <img class="logo" src="/project-news-site/code/logo.svg" alt="Technigo logo">
-      <!-- Some kind of logo and navbar -->
-       
+     
       <div class="hamburger"></div>
       <div class="hamburger"></div>
       <div class="hamburger"></div> 
@@ -30,30 +31,32 @@
         </nav>
     </header>
 
+<!--- End of hero section -->
+
   <section class="big-mama-news">
       <!-- The big news content -->
-      <figure class="big-news-item">
+      <figure class="big-news-baby">
         <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt="">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, optio porro sint ea aliquid vitae eos doloribus ut consectetur, enim vel, dolores molestias pariatur distinctio a. Aut deleniti tenetur dolor?</p>
         </figure>
-      <figure class="big-news-item"> <img src="/project-news-site/assets/blackboston.jpg" class="grid__img" alt="">
+      <figure class="big-news-baby"> <img src="/project-news-site/assets/blackboston.jpg" class="grid__img" alt="">
         </figure>
-      <figure class="big-news-item"> <img src="/project-news-site/assets/blinkingpuppy.jpg" class="grid__img" alt="">
+      <figure class="big-news-baby"> <img src="/project-news-site/assets/blinkingpuppy.jpg" class="grid__img" alt="">
         </figure>
-      <figure class="big-news-item"> <img src="/project-news-site/assets/dogbomberjacket.jpg" class="grid__img" alt="">
+      <figure class="big-news-baby"> <img src="/project-news-site/assets/dogbomberjacket.jpg" class="grid__img" alt="">
         </figure>
-      <figure class="big-news-item"> <img src="/project-news-site/assets/dogwithhat.jpg" class="grid__img" alt="">
+      <figure class="big-news-baby"> <img src="/project-news-site/assets/dogwithhat.jpg" class="grid__img" alt="">
         </figure>
-      <figure class="big-news-item"> <img src="/project-news-site/assets/dogfood.jpg" class="grid__img" alt="">
+      <figure class="big-news-baby"> <img src="/project-news-site/assets/dogfood.jpg" class="grid__img" alt="">
         </figure>
-      <figure class="big-news-item"> <img src="/project-news-site/assets/pexels-amy-mccormack-5463180.jpg" alt=""> </figure>
-    <figure class="big-news-item"> <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt="">
+      <figure class="big-news-baby"> <img src="/project-news-site/assets/pexels-amy-mccormack-5463180.jpg" alt=""> </figure>
+    <figure class="big-news-baby"> <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt="">
         </figure>
-    <figure class="big-news-item grid-item"> <img src="/project-news-site/assets/taxmedtröja.jpg" class="grid__img" alt="">
+    <figure class="big-news-baby grid-item"> <img src="/project-news-site/assets/taxmedtröja.jpg" class="grid__img" alt="">
         </figure>
-    <figure class="big-news-item grid-item"> <img src="/project-news-site/assets/unicorndog.jpg" class="grid__img" alt="">
+    <figure class="big-news-baby grid-item"> <img src="/project-news-site/assets/unicorndog.jpg" class="grid__img" alt="">
         </figure>
-    <figure class="big-news-item"> <img src="/project-news-site/assets/winteriscoming.jpg" class="grid__img" alt="">
+    <figure class="big-news-baby"> <img src="/project-news-site/assets/winteriscoming.jpg" class="grid__img" alt="">
      </figure>
   </section>
 
