--- a/code/index.html
+++ b/code/index.html
@@ -36,23 +36,23 @@
    <section class="grid-container">
     
      <!-- Big news -->
-      <div class="big-news">
+      <article class="big-news">
         <div class="breaking-container">
           <p class="breaking">Breaking news Breaking news</p>
         </div>
-        <div class="big-article-img">
+        <div class="big-news-img">
           <img src="./bowls-2-612x612.jpg">
         </div>
         <div class="big-text-wrapper">
           <h2>Bowls still empty</h2>
           <strong>No estimate on when refill might be expected, sources say</strong>
-          <p>Our correspondent on site reports humans in the area. So far they have not responded to any attempts of contact.</p>
+          <p class="big-news-text">Our correspondent on site reports humans in the area. So far they have not responded to any attempts of contact.</p>
           <button>Follow live updates</button>
        </div>
-      </div>
+      </article>
       <!--Item 1, the second important news item-->
-      <div class="news-item item1">  
-        <div class="article-img">
+      <article class="news-item item1">  
+        <div>
           <p class="tag">NEWS</p>
           <img src="./20201023.jpg">
         </div>
@@ -61,62 +61,62 @@
           <p>“We work hard as cats. Just this week we toppled three plants, slept 18 hours and walked over several keyboards. We demand fair compensation” chaircat Popcorn says. "Absurd claims" according to humans 
           </p>
         </div>
-      </div>
-      <div class="news-item item2">
-        <div class="article-img">
+      </article>
+      <article class="news-item item2">
+        <div>
           <p class="tag">EDITORIAL</p>
           <img src="./IMG_0630.jpg">
         </div>
         <div class="text-wrapper">
           <h4>Birds, why do they even exist?</h4>
         </div>
-      </div>
-      <div class="news-item item3">
-        <div class="article-img">
+      </article>
+      <article class="news-item item3">
+        <div>
           <p class="tag">LIFESTYLE</p>
           <img src="./20210626_151104_246.jpg">
         </div>
-        <div class="text-wrapper">
+        <div>
           <h4>New trend: wake up at 3 for more nap time during the day</h4>
         </div>
-      </div>  
-      <div class="news-item item4">
-        <div class="article-img">
+      </article>  
+      <article class="news-item item4">
+        <div>
           <p class="tag">LIFESTYLE</p>
           <img src="./lifestyle.jpg">
         </div>
-        <div class="text-wrapper">
+        <div>
           <h4>Ignore expensive toys - play with trash instead!</h4>
         </div>
-      </div>
-      <div class="news-item item5">
-        <div class="article-img">
+      </article>
+      <article class="news-item item5">
+        <div>
           <p class="tag">NEWS</p>
-          <img src="./pexels-gustavo-fring-6816859.jpg">
+          <img src="./20220616.jpg">
         </div>
-        <div class="text-wrapper">
+        <div>
           <h4>Study shows most cats avoid the vet</h4>
         </div>
-      </div>
-      <div class="news-item item6">
-        <div class="article-img">
+      </article>
+      <article class="news-item item6">
+        <div>
           <p class="tag">CULTURE</p>
           <img src="./20220802.jpg">
         </div>
-        <div class="text-wrapper">
+        <div>
           <h4>Cardboard box review</h4>
         </div>
-      </div>
-      <div class="news-item item7">
-        <div class="article-img">
+      </article>
+      <article class="news-item item7">
+        <div>
           <p class="tag">WEATHER</p>
           <img src="./catrain-612x612.jpg">
         </div>
-        <div class="text-wrapper">
+        <div>
           <h4>Weather report: Not okay</h4>
         </div>
-      </div>
-      <div class="news-item item8">
+      </article>
+      <article class="news-item item8">
         <div class="article-img">
           <p class="tag">CULTURE</p>
           <img src="./pexels-pixabay-39484.jpg">
@@ -124,7 +124,16 @@
         <div class="text-wrapper">
           <h4>Cat tv: squirrel feeder lives up to hype</h4>
         </div>
-      </div>
+      </article>
+      <article class="news-item item9">
+        <div>
+          <p class="tag">LIFESTYLE</p>
+          <img src="./IMG_0625.JPG">
+        </div>
+        <div>
+          <h4>Which bed is best for you?</h4>
+        </div>
+      </article>
     </section>
   </body>
 </html>
