--- a/code/index.html
+++ b/code/index.html
@@ -8,65 +8,65 @@
     <!-- dont forget the meta tag for responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-    <header>
+  <header>
       <!-- Some kind of logo and navbar -->
-      <div class="navbar">
-        <nav>
-          <section class ="flex-parent-logo">
-            <img class ="flex-child-image"src="./chocolate-logo.jpg" alt="Chocolate-logo">
-            <h1 class ="flex-child-logo-title">The Chocolate Post</h1>
-          </section>
-          <div id="myLinks">
-            <ul class ="nav-links">
-              <li><a href="#about">About</a></li>
-              <li><a href="#recipes">Recipes</a></li>
-              <li><a href="#news">News</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div>
-           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>  
-            </a>
-          <script>
+    <div class="navbar">
+      <nav>
+        <section class ="flex-parent-logo">
+          <img class ="flex-child-image"src="./chocolate-logo.jpg" alt="Chocolate-logo">
+          <h1 class ="flex-child-logo-title">The Chocolate Post</h1>
+        </section>
+        <div id="myLinks">
+          <ul class ="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#recipes">Recipes</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>  
+          </a>
+        <script>
           function myFunction() {
           var x = document.getElementById("myLinks");
           if (x.style.display === "block") {
           x.style.display = "none";
           } else {
           x.style.display = "block";
-            }
           }
-          </script>
-        </nav>
-      </div>    
-    </header>
-    <body>
-      <section class="grid-parent-big-news">
+          }
+        </script>
+      </nav>
+    </div>    
+  </header>
+  <body>
+    <section class="grid-parent-big-news">
       <!-- The big news content -->
-        <div class="grid-item-big-card-img">
-          <img src="./chocolate-two-layer-cake.jpg" alt ="chocolate-fudge-cake">
-         </div>
-        <div class="grid-item-big-text">
-          <h2 class="card-title" style="padding-bottom:1em">Recipe of the Week</h2>
-          <h3 class ="card-description" style="padding-bottom:1em">Chocolate Fudge Cake with rich buttercream</h3>
-          <p> The perfect Chocolate Fudge Cake covered in a creamy, lush chocolate buttercream. Layers of buttery, chocolate goodness, paired with the ultimate frosting and chocolate shavings - heaven!</p> 
-          <p style ="padding-top:1em"> Perfect for any occassion, it's easy-peasy to make, too.</p>
-          <p style ="padding-top: 1em">You'll be coming back for seconds in no time!</p>
-          <a class ="click-me" href="https://www.sweetestmenu.com/chocolate-fudge-layer-cake/"><button>Bake me!</button></a>
-        </div>
-      </section>
-      <section class="grid-parent-other-news">
+      <div class="grid-item-big-card-img">
+        <img src="./chocolate-two-layer-cake.jpg" alt ="chocolate-fudge-cake">
+      </div>
+      <div class="grid-item-big-text">
+        <h2 class="card-title" style="padding-bottom:1em">Recipe of the Week</h2>
+        <h3 class ="card-description" style="padding-bottom:1em">Chocolate Fudge Cake with rich buttercream</h3>
+        <p> The perfect Chocolate Fudge Cake covered in a creamy, lush, chocolate buttercream. Layers of buttery, chocolate goodness, paired with the ultimate frosting and white chocolate shavings - heaven!</p> 
+        <p style ="padding-top:1em"> Perfect for any occassion, it's easy-peasy to make, too.</p>
+        <p style ="padding-top: 1em">You'll be coming back for seconds in no time!</p>
+        <a class ="click-me" href="https://www.sweetestmenu.com/chocolate-fudge-layer-cake/"><button>Bake me!</button></a>
+      </div>
+    </section>
+    <section class="grid-parent-other-news">
        <!-- The other news  -->
-        <div class="grid-item-card">
-         <img src="./chocolate-drink.jpeg" alt="chocolate-drink">
-         <h4>What alcohol pairs well with chocolate?</h4>
-         <a href="https://www.toastmag.co.nz/spirits/pairing-chocolate-and-alcohol">Drink me!</a>
-        </div>
-        <div class="grid-item-card">
-          <img src="./vegan-chocolate.jpeg" alt="vegan-chocolate">
-          <h4>Looking for vegan chocolate?</h4>
-          <a href="https://vegnews.com/vegan-guides/chocolate/accidentally-vegan-chocolates">Find me!</a>
-        </div> 
+      <div class="grid-item-card">
+        <img src="./chocolate-drink.jpeg" alt="chocolate-drink">
+        <h4>What alcohol pairs well with chocolate?</h4>
+        <a href="https://www.toastmag.co.nz/spirits/pairing-chocolate-and-alcohol">Drink me!</a>
+      </div>
+      <div class="grid-item-card">
+        <img src="./vegan-chocolate.jpeg" alt="vegan-chocolate">
+        <h4>Looking for vegan chocolate?</h4>
+        <a href="https://vegnews.com/vegan-guides/chocolate/accidentally-vegan-chocolates">Find me!</a>
+      </div> 
       <div class="grid-item-card">
         <img src="./chocolate-chilli.jpeg" alt="chocolate-chilli">
         <h4>What happens when we add chilli to chocolate?</h4>
@@ -81,22 +81,22 @@
         <img src="./cacao-beans-image.jpg" alt="cacao-beans">
         <h4>Want to know more about cacao beans?</h4>
         <a href="https://www.lakechamplainchocolates.com/what-is-cacao/">Tell me!</a>
-       </div>
-       <div class="grid-item-card">
-         <img src="./chocolate-and-fruit.jpg" alt="chocolate-and-fruit">
-         <h4>Which fruit tastes good with chocolate?</h4>
-         <a href="https://www.berries.com/blog/fruit-chocolate-pairings">Show me!</a>
-       </div> 
-     <div class="grid-item-card">
-       <img src="./birthday-cake.jpg" alt="birhtday-cake">
-       <h4>How can I make a sugar-free chocolate birthday cake?</h4>
-       <a href="https://thebestcakerecipes.com/sugar-free-chocolate-cake/">Help me!</a>
-     </div>
-     <div class="grid-item-card">
-      <img src="./dark-chocolate.jpeg" alt="dark-chocolate">
-      <h4>The health benefits of dark chocolate.</h4>
-      <a href="https://www.everydayhealth.com/diet-and-nutrition-pictures/delicious-reasons-to-eat-dark-chocolate.aspx">Teach me!</a>
-     </div>
+      </div>
+      <div class="grid-item-card">
+        <img src="./chocolate-and-fruit.jpg" alt="chocolate-and-fruit">
+        <h4>Which fruit tastes good with chocolate?</h4>
+        <a href="https://www.berries.com/blog/fruit-chocolate-pairings">Show me!</a>
+      </div> 
+      <div class="grid-item-card">
+        <img src="./birthday-cake.jpg" alt="birhtday-cake">
+        <h4>I want to go sugar-free for my kids!</h4>
+        <a href="https://thebestcakerecipes.com/sugar-free-chocolate-cake/">Help me!</a>
+      </div>
+      <div class="grid-item-card">
+        <img src="./dark-chocolate.jpeg" alt="dark-chocolate">
+        <h4>The health benefits of dark chocolate.</h4>
+        <a href="https://www.everydayhealth.com/diet-and-nutrition-pictures/delicious-reasons-to-eat-dark-chocolate.aspx">Teach me!</a>
+      </div>
     </section>
     <footer>
       <img class ="technigo-logo" src="logo.svg" alt=Technigo-SVG>
