added linebreaks to big news text

--- a/code/index.html
+++ b/code/index.html
@@ -24,7 +24,7 @@
      <div>
       <section class="grid-parent">
         <div class="grid-item big-news-grid">
-          <img class="bignewspicture" src="/pictures/greenpines.jpeg" alt="Green pines from above">
+          <img class="bignewspicture" src="/pictures/greenpines.jpeg" alt="Green pines from above" title="green-pines">
             <div class="bignewstext">
               <article>
                 <h1>This is a beautiful tree.</h1>
